<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:paddingLeft="2dp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvLongt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longt"
                android:paddingLeft="2dp"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:paddingLeft="2dp"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/time"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:paddingLeft="2dp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/hello_world"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/tvDist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dist"
        android:paddingLeft="2dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/dbID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dist"
        android:visibility="gone" />

</LinearLayout>