<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6d0c3"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/plcTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/meetPlc"
            android:textColor="#000000"
            android:textSize="30sp" />
        <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:text="@string/place"
            android:textColor="#1a237e"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tvLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="@string/lat"
                android:textColor="#1a237e"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="20"
                android:inputType="numberDecimal"
                android:textColor="#1a237e" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tvLongt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="@string/longt"
                android:textColor="#1a237e"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etLongt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="20"
                android:inputType="numberDecimal"
                android:textColor="#1a237e" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <!-- To display picture taken -->

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/hello_world"
                android:src="@drawable/ic_launcher" />

            <!-- Capture picture button -->

            <Button
                android:id="@+id/btnCapturePicture"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/takePic" />
        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <Button
            android:id="@+id/bttnSave"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>