<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/vTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#b31a39"
        android:text="@string/visit"
        android:textSize="30sp" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#000000" />
    
    <TextView
        android:id="@+id/tvCLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/curnlocation"
        android:paddingLeft="2dp"
        android:textSize="20sp"
        android:textColor="#2979ff" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#000000" />
    
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </ListView>
    
    </LinearLayout>
    
    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/home"
        android:textSize="20sp" />

</RelativeLayout>
