<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00e572"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dispTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00aff0"
            android:gravity="center"
            android:text="@string/detail"
            android:textColor="#2c50a2"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <!-- To display picture taken -->

            <ImageView
                android:id="@+id/imgPrev"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/hello_world"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#2d28b4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#004c26"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="2dp"
                android:text="@string/datetime"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvDPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="@string/place"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvLngLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="@string/latlng"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#2d28b4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#000000"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/tvDName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="2dp"
                android:text="@string/name"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvDNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.6"
                    android:paddingLeft="2dp"
                    android:text="@string/number"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.20"
                    android:clickable="true"
                    android:contentDescription="@string/hello_world"
                    android:onClick="performCall"
                    android:src="@drawable/iconcall" />

                <ImageView
                    android:id="@+id/imgSms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.20"
                    android:clickable="true"
                    android:contentDescription="@string/hello_world"
                    android:onClick="performSms"
                    android:src="@drawable/iconsms" />

                <ImageView
                    android:id="@+id/imgCont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.20"
                    android:clickable="true"
                    android:contentDescription="@string/hello_world"
                    android:onClick="performAdd"
                    android:src="@drawable/iconcontact" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvDEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.60"
                    android:paddingLeft="2dp"
                    android:text="@string/email"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.10"
                    android:clickable="true"
                    android:contentDescription="@string/hello_world"
                    android:onClick="performEmail"
                    android:src="@drawable/iconemail" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#2d28b4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:background="#27f8b4"
                android:paddingLeft="2dp"
                android:text="@string/edit"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:background="#ce260b"
                android:clickable="true"
                android:onClick="performDelete"
                android:text="@string/del"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>