<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d4d4d4"
    tools:context="com.ftfl.mymeetingplaces.HomeScreenActivity" >
    
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-123456789/123456789" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:layout_below="@+id/adView"
        android:background="#848484"
        android:paddingBottom="2dp"
        android:textSize="30sp"
        android:textColor="#2c50a2"
        android:text="@string/mtnplc" />
    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/textView1"
        android:background="#000000" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view"
        android:layout_marginTop="90dp"
        android:background="#00ff7f"
        android:text="@string/reg"
        android:textSize="30sp" />
    
    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:layout_below="@+id/buttonReg"
        android:background="#663399" />

    <Button
        android:id="@+id/buttonRvw"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view1"
        
        android:background="#00ff7f"
        android:text="@string/rvw"
        android:textSize="30sp" />

</RelativeLayout>